--- a/styles/global.css
+++ b/styles/global.css
@@ -1,51 +1,5 @@
-/* COMPUTER MODERN */
-/* @import url('../public/fonts/computer-modern/bright.css');
-@import url('../public/fonts/computer-modern/concrete.css');
-@import url('../public/fonts/computer-modern/sans-serif.css');
-@import url('../public/fonts/computer-modern/serif.css');
-@import url('../public/fonts/computer-modern/typewriter.css'); */
-
-/* Amatic SC */
-/* @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Delius&family=Fira+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Sora:wght@100;200;300;400;500;600;700;800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap'); */
-
-/* Source Sans Pro */
-/* @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap'); */
-/* @import url('../public/fonts/source-pro/source-serif-pro.css'); */
-
-/* Helvetica Neue */
-/* @import url('../public/fonts/helvetica-neue/helvetica-neue.css'); */
-
-/* Helvetica */
-/* @import url('https://fonts.googleapis.com/css2?family=Helvetica:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
-
-/* Roboto */
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
-
-/* Nimbus Sans L */
-/* @import url('../public/fonts/nimbus-sans/nimbus-sans.css'); */
-
-/* Lato */
-/* @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap'); */
-
-/* JetBrains Mono */
-/* @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono'); */
-
-/* Merriweather */
-/* @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap'); */
-
-/* Montserrat */
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
-
-/* Work Sans */
-/* @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
-
-/* Geist Mono */
-/* @import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
-
-/* Replace active.css with css properties of the required font combination */
-/* Current active font: Work Sans + Geist Mono */
-@import url('../public/fonts/active.css');
+/* Edit active.css with css properties of the required font combination */
+/* Current active font: Work Sans + Fira Code + EB Garamond */
 
 html,
 body {
@@ -79,23 +33,27 @@ a:hover img {
 }
 
 pre, code {
-  font-family: 'Geist Mono', monospace;
+  font-family: 'Fira Code', monospace;
   background-color: #eee;
   border: 1px solid #ccc;
   font-size: 92%;
 }
 pre {
-  padding: 10px;
+  padding: 8px;
   border-radius: 5px;
   white-space: pre-wrap;
 }
 code {
-  padding: .12em .20em;
+  padding: .08em .18em;
   border-radius: .375rem;
   line-height: 1.2;
 }
 pre code {
   all: unset;
+}
+
+code#flashy {
+  font-family: 'Bitcount Grid Single', monospace;
 }
 
 nav {
